<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/crNome" >
        </TextView>

        <TextView
            android:id="@+id/txtCpf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNome"
            android:text="@string/crCpf" >
        </TextView>

        <TextView
            android:id="@+id/txtTelefone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCpf"
            android:text="@string/crTelefone" >
        </TextView>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTelefone"
            android:text="@string/crEmail" >
        </TextView>
    </RelativeLayout>

</LinearLayout>